build/readiness-app/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InContact_ContactId__c</fullName>
        <label>InContact_ContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <label>Media Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostQueueSeconds__c</fullName>
        <label>PostQueueSeconds</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>preQueueSeconds__c</fullName>
        <label>preQueueSeconds</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill_Name__c</fullName>
        <label>Skill Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <label>Team Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>